# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: page_analyzer.yml  pyci.yml
page_analyzer/: __init__.py  app.py  db_worker.py  html_parser.py  normalizator.py  response.py  url.py  validator.py
page_analyzer/templates/: flash_messages.html  head.html  header.html  headers.html  index.html  show_all_urls.html  show_url.html
tests/: test_request.py
